--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -39,8 +39,14 @@ tolerations: []
 affinity: {}
 
 forecastInputVolume: 
-  emptyDir: {}
+  persistentVolumeClaim:
+    claimName: forecast-data-pvc
 
 kafkaOutputTopic: weather-forecast-raw
 
 kafkaHost: my-cluster-kafka-brokers
+
+forecastDataVolume:
+  accessMode: ReadWriteOnce
+  size: 1G
+  storageClass: standard
