--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -50,3 +50,15 @@ forecastDataVolume:
   accessMode: ReadWriteOnce
   size: 1G
   storageClass: standard
+
+file-mover:
+  folderMounts:
+    input:
+      enabled: true
+      volume:
+        emptyDir: {}
+    output:
+      enabled: true
+      volume:
+        persistentVolumeClaim:
+          claimName: forecast-data-pvc
