Updated link to repository

--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v2
 name: forecast-parser
 description: A Helm chart for Kubernetes
 
-version: 0.1.0
+version: 0.1.1
 
 appVersion: "1.16.0"
 
 dependencies:
   - name: file-mover
     version: 0.1.0
-    repository: "file://../../file-mover/chart"
+    repository: "https://energinet-singularity.github.io/helm-registry/"
