--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -42,14 +42,19 @@ forecastInputVolume:
   persistentVolumeClaim:
     claimName: forecast-data-pvc
 
-kafkaOutputTopic: weather-forecast-raw
-kafkaHost: my-cluster-kafka-brokers
-ksqlhost: kafka-cp-ksql-server
-
 forecastDataVolume:
   accessMode: ReadWriteOnce
   size: 1G
   storageClass: standard
+
+kafka:
+  topic: weather-forecast-raw
+  host: my-cluster-kafka-brokers
+  port: 9092
+
+ksql:
+  host: kafka-cp-ksql-server
+  port: 8088
 
 file-mover:
   folderMounts:
