--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/energinet-singularity/forecast-parser/energinet-singularity/forecast-parser
   pullPolicy: IfNotPresent
-  tag: "1.0.0"
+  tag: "1.0.3"
 
 #Setup file-mover dependency first
 forecastInputVolume: 
@@ -30,6 +30,22 @@ file-mover:
       volume:
         persistentVolumeClaim:
           claimName: forecast-data-pvc
+  podLabels:
+    fm-forecast-parser: "S1"
+  selectorLabels:
+    fm-forecast-parser: "S1"
+  affinity:
+    podAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 1
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: forecast-fm-parser
+                operator: In
+                values:
+                - S1
+          topologyKey: "kubernetes.io/hostname"
 
 #Specifying local variables
 kafka:
@@ -41,6 +57,21 @@ ksql:
   host: kafka-cp-ksql-server
   port: 8088
 
+podLabels:
+  forecast-fm-parser: "S1"
+selectorLabels:
+  forecast-fm-parser: "S1"
+affinity:
+  podAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+            - key: fm-forecast-parser
+              operator: In
+              values:
+              - S1
+        topologyKey: "kubernetes.io/hostname"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -49,7 +80,6 @@ podSecurityContext: {}
 securityContext: {}
 nodeSelector: {}
 tolerations: []
-affinity: {}
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
