Add debug logging
Add flag to enable debug logging

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
               value: {{ .Values.ksql.host | quote }}
             - name: KSQL_PORT
               value: {{ .Values.ksql.port | quote }}
+              {{- if .Values.Debug }}
+            - name: DEBUG
+              value: {{ .Values.Debug | quote }}
+              {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
