Add mock-data functionality
Added the option to mock data in case running in a situation where
real data is not available.

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
             - name: DEBUG
               value: {{ .Values.Debug | quote }}
               {{- end }}
+              {{- if .Values.MockData }}
+            - name: USE_MOCK_DATA
+              value: {{ .Values.MockData | quote }}
+              {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
