--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,3 @@
-kafka-python==2.0.2
-pandas==1.3.5
-requests==2.26.0
+pandas~=1.3
+requests~=2.26
+git+https://github.com/energinet-singularity/singupy.git#egg=singupy
