--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
-            - mountPath: /app/weatherforecast/
+            - mountPath: /app/weatherforecasts/
               name: forecast-input
           env:
           {{- range $name, $value := .Values.EnvVars }}
